--- a/PU_R8.html
+++ b/PU_R8.html
@@ -394,8 +394,8 @@ h4 {
     <div id="game-results"></div>
 
     <div class="round-navigation">      
-      <button id="prevBtn" onclick="prevRound()" disabled>← Previous Round</button>
-      <button id="nextBtn" onclick="nextRound()" disabled>Next Round →</button>
+      <button id="prevBtn" onclick="prevRound()" disabled>←Prev Round</button>
+      <button id="nextBtn" onclick="nextRound()" disabled>Next Round→</button>
     </div>
 
     <!-- Back button -->
