--- a/Badminton_PairUP_V1u.html
+++ b/Badminton_PairUP_V1u.html
@@ -142,21 +142,66 @@ h4 {
   position: fixed;
   top: 0; left: 0;
   width: 100vw; height: 100vh;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.55);
+  backdrop-filter: blur(4px);
   z-index: 1000;
+  animation: fadeIn 0.3s ease-out;
 }
+
 #importModal .modal-content {
-  background: white;
-  color: black;
-  max-width: 400px;
-  margin: 100px auto;
-  padding: 20px;
-  border-radius: 10px;
+  background: #ffffff;
+  color: #333;
+  max-width: 420px;
+  width: 90%;
+  margin: 120px auto;
+  padding: 24px 28px;
+  border-radius: 12px;
+  box-shadow: 0 6px 24px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  transform: scale(0.95);
+  animation: slideUp 0.3s ease-out forwards;
+  font-family: "Segoe UI", Roboto, sans-serif;
 }
+
+#importModal h2 {
+  margin-top: 0;
+  color: #222;
+  font-size: 1.3rem;
+  margin-bottom: 12px;
+}
+
+#importModal p {
+  font-size: 0.95rem;
+  color: #555;
+  margin-bottom: 20px;
+}
+
 #importModal button {
-  margin-top: 10px;
-  padding: 8px 12px;
+  margin: 6px;
+  padding: 10px 18px;
   border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+}
+
+#importModal .btn-primary {
+  background: linear-gradient(135deg, #4a00e0, #8e2de2);
+  color: white;
+}
+
+#importModal .btn-primary:hover {
+  background: linear-gradient(135deg, #3a00c0, #7b1fd1);
+}
+
+#importModal .btn-secondary {
+  background: #e0e0e0;
+  color: #333;
+}
+
+#importModal .btn-secondary:hover {
+  background: #d5d5d5;
 }
 
 /* === PAGE 2: Match Results / Court Layout === */
@@ -1152,5 +1197,6 @@ function showRound(index) {
   </script>
 </body>
 </html>
+
 
 
