--- a/Badminton_PairUP_V1u.html
+++ b/Badminton_PairUP_V1u.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Badminton Pair-UP</title>
+  <title>Badminton Games </title>
   <style>
    /* === GLOBAL === */
 body {
@@ -1197,6 +1197,7 @@ function showRound(index) {
   </script>
 </body>
 </html>
+
 
 
 
