--- a/Badminton_PairUP_V1u.html
+++ b/Badminton_PairUP_V1u.html
@@ -6,360 +6,734 @@
   <title>Badminton Games </title>
   <style>
    /* === GLOBAL === */
+
 body {
+
   margin: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #3b0073, #7d00b8);
-  color: white;
+
+  font-family: 'Segoe UI', Arial, sans-serif;
+
+  background: linear-gradient(120deg, #3b0073 0%, #7d00b8 100%);
+
+  color: #f3e8ff;
+
   text-align: center;
+
+  min-height: 100vh;
+
   overflow-x: hidden;
+
 }
+
 header {
-  padding: 10px;
+
+  padding: 18px 0 12px 0;
+
+  background: linear-gradient(90deg, #3b0073, #7d00b8 70%);
+
+  box-shadow: 0 2px 10px rgba(50,0,80,0.12);
+
 }
+
 h1 {
-  font-size: 42px;
+
+  font-size: 2.6rem;
+
   margin: 0;
-  font-weight: bold;
+
+  font-weight: 900;
+
   text-transform: uppercase;
-  letter-spacing: 2px;
+
+  letter-spacing: 2.5px;
+
+  color: #fff;
+
+  text-shadow: 0 2px 6px rgba(60,0,100,0.15);
+
 }
-h3 {
-  font-size: 20px;
-  margin-bottom: 12px;
-  color: #3a1818;
+
+h3, h4 {
+
+  font-size: 1.15rem;
+
+  margin: 18px 0 10px 0;
+
+  color: #ffe2ff;
+
+  font-weight: 600;
+
 }
+
 h4 {
-  font-size: 20px;
+
   margin-top: 0;
-  margin-bottom: 10px;
-  margin: 0;
-  padding: 0;
+
+  padding-bottom: 4px;
+
+  color: #c5b7d6;
+
 }
+
+ 
 
 /* === PAGE 1: Player Entry / Setup === */
+
 .container {
-  max-width: 800px;
-  margin: auto;
-  padding: 20px;
-}
-.card {
-  background: white;
-  color: purple;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-}
-.card input, .card select, .card button, textarea {
-  width: 100%;
-  padding: 10px;
-  margin: 8px 0;
-  font-size: 16px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-.card button {
-  background: purple;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
-}
-.card button:hover {
-  background: #5e009c;
-  transform: scale(1.05);
-}
-#player-list-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 2px;
-}
-#player-list-table th, #player-list-table td {
-  border: 1px solid #ccc;
-  padding: 2px 4px;
-  text-align: left;
-  font-size: 12px;
-}
-#player-list-table th {
-  background: #f2f2f2;
-}
-.delete-btn {
-  background: none;
-  border: none;
-  color: #d11a2a;
-  font-size: 16px;
-  cursor: pointer;
-}
-.delete-btn:hover {
-  color: #a00;
-}
-.fixed-pairs-list {
-  margin-top: 10px;
-}
-.fixed-pair-item {
-  background: #eee;
-  color: black;
-  padding: 6px 10px;
-  border-radius: 6px;
-  margin: 5px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.fixed-pair-remove {
-  color: #d11a2a;
-  cursor: pointer;
-  margin-left: 12px;
-}
-.fixed-pair-remove:hover {
-  color: #a00;
-}
-.main-action {
-  display: block;
-  width: 100%;
-  background: orange;
-  color: black;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 14px;
-  border-radius: 8px;
-  margin-top: 20px;
-  cursor: pointer;
-  border: none;
-  transition: background 0.3s, transform 0.2s;
-}
-.main-action:hover {
-  background: #ffb84d;
-  transform: scale(1.05);
+
+  max-width: 900px;
+
+  margin: 30px auto 0 auto;
+
+  padding: 28px 14px 22px 14px;
+
+  background: rgba(255,255,255,0.08);
+
+  border-radius: 16px;
+
+  box-shadow: 0 6px 22px rgba(60,0,100,0.10);
+
 }
 
+ 
+
+.card {
+
+  background: #fff;
+
+  color: #44006e;
+
+  padding: 28px 22px;
+
+  margin-bottom: 30px;
+
+  border-radius: 14px;
+
+  box-shadow: 0 4px 14px rgba(50,0,80,0.18);
+
+  transition: box-shadow 0.2s;
+
+}
+
+.card:hover {
+
+  box-shadow: 0 8px 24px rgba(60,0,100,0.28);
+
+}
+
+.card input, .card select, .card button, textarea {
+
+  width: 100%;
+
+  padding: 12px;
+
+  margin: 10px 0;
+
+  font-size: 1rem;
+
+  border-radius: 7px;
+
+  border: 1px solid #c3a8e4;
+
+  box-sizing: border-box;
+
+  background: #f7f1ff;
+
+  color: #3b0073;
+
+  transition: border 0.2s, box-shadow 0.2s;
+
+}
+
+.card input:focus, .card select:focus, textarea:focus {
+
+  border: 1.5px solid #7d00b8;
+
+  box-shadow: 0 0 6px #7d00b8;
+
+  outline: none;
+
+}
+
+.card button {
+
+  background: linear-gradient(90deg, #7d00b8 30%, #3b0073 100%);
+
+  color: #fff;
+
+  border: none;
+
+  font-weight: bold;
+
+  cursor: pointer;
+
+  transition: background 0.3s, transform 0.2s;
+
+  box-shadow: 0 2px 8px rgba(60,0,100,0.10);
+
+}
+
+.card button:hover, .main-action:hover {
+
+  background: linear-gradient(90deg, #5e009c 30%, #3b0073 100%);
+
+  transform: scale(1.045);
+
+}
+
+#player-list-table {
+
+  width: 100%;
+
+  border-collapse: collapse;
+
+  margin-top: 6px;
+
+  background: #f7f1ff;
+
+  border-radius: 8px;
+
+  overflow: hidden;
+
+}
+
+#player-list-table th, #player-list-table td {
+
+  border: 1px solid #d6c5e7;
+
+  padding: 7px 12px;
+
+  text-align: left;
+
+  font-size: 15px;
+
+}
+
+#player-list-table th {
+
+  background: #ece2f5;
+
+  color: #3b0073;
+
+  font-weight: 600;
+
+}
+
+.delete-btn {
+
+  background: none;
+
+  border: none;
+
+  color: #d11a2a;
+
+  font-size: 18px;
+
+  cursor: pointer;
+
+  transition: color 0.2s;
+
+}
+
+.delete-btn:hover {
+
+  color: #a00;
+
+}
+
+.fixed-pairs-list {
+
+  margin-top: 12px;
+
+}
+
+.fixed-pair-item {
+
+  background: #ece2f5;
+
+  color: #3b0073;
+
+  padding: 8px 16px;
+
+  border-radius: 7px;
+
+  margin: 6px 0;
+
+  display: flex;
+
+  justify-content: space-between;
+
+  align-items: center;
+
+  font-weight: 500;
+
+}
+
+.fixed-pair-remove {
+
+  color: #d11a2a;
+
+  cursor: pointer;
+
+  margin-left: 14px;
+
+  font-size: 1.2em;
+
+  transition: color 0.2s;
+
+}
+
+.fixed-pair-remove:hover {
+
+  color: #a00;
+
+}
+
+.main-action {
+
+  display: block;
+
+  width: 100%;
+
+  background: linear-gradient(90deg, #ff9800 10%, #ffe2a0 100%);
+
+  color: #3b0073;
+
+  font-size: 1.25rem;
+
+  font-weight: bold;
+
+  padding: 16px;
+
+  border-radius: 9px;
+
+  margin-top: 28px;
+
+  cursor: pointer;
+
+  border: none;
+
+  transition: background 0.3s, transform 0.2s;
+
+  box-shadow: 0 2px 8px rgba(60,0,100,0.10);
+
+}
+
+.main-action:hover {
+
+  background: linear-gradient(90deg, #ffb84d 10%, #ffe2a0 100%);
+
+  transform: scale(1.045);
+
+}
+
+ 
+
 /* === Modal === */
+
 #importModal {
+
   display: none;
+
   position: fixed;
+
   top: 0; left: 0;
+
   width: 100vw; height: 100vh;
-  background: rgba(0, 0, 0, 0.55);
-  backdrop-filter: blur(4px);
+
+  background: rgba(0,0,0,0.7);
+
   z-index: 1000;
-  animation: fadeIn 0.3s ease-out;
+
 }
 
 #importModal .modal-content {
-  background: #ffffff;
-  color: #333;
+
+  background: #fff;
+
+  color: #3b0073;
+
   max-width: 420px;
-  width: 90%;
+
   margin: 120px auto;
-  padding: 24px 28px;
+
+  padding: 26px;
+
   border-radius: 12px;
-  box-shadow: 0 6px 24px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  transform: scale(0.95);
-  animation: slideUp 0.3s ease-out forwards;
-  font-family: "Segoe UI", Roboto, sans-serif;
-}
 
-#importModal h2 {
-  margin-top: 0;
-  color: #222;
-  font-size: 1.3rem;
-  margin-bottom: 12px;
-}
+  box-shadow: 0 6px 22px rgba(50,0,80,0.17);
 
-#importModal p {
-  font-size: 0.95rem;
-  color: #555;
-  margin-bottom: 20px;
 }
 
 #importModal button {
-  margin: 6px;
-  padding: 10px 18px;
-  border-radius: 6px;
+
+  margin-top: 14px;
+
+  padding: 10px 16px;
+
+  border-radius: 7px;
+
+  background: linear-gradient(90deg, #7d00b8 30%, #3b0073 100%);
+
+  color: #fff;
+
   border: none;
-  cursor: pointer;
-  font-weight: 500;
-  transition: all 0.2s ease-in-out;
+
+  font-weight: 600;
+
+  font-size: 1rem;
+
 }
 
-#importModal .btn-primary {
-  background: linear-gradient(135deg, #4a00e0, #8e2de2);
-  color: white;
-}
-
-#importModal .btn-primary:hover {
-  background: linear-gradient(135deg, #3a00c0, #7b1fd1);
-}
-
-#importModal .btn-secondary {
-  background: #e0e0e0;
-  color: #333;
-}
-
-#importModal .btn-secondary:hover {
-  background: #d5d5d5;
-}
+ 
 
 /* === PAGE 2: Match Results / Court Layout === */
+
 #game-results {
+
   display: flex;
+
   flex-direction: column;
+
   align-items: center;
-  gap: 5px;
-  padding: 5px 5px 5px;
+
+  gap: 14px;
+
+  padding: 18px 8px 16px;
+
   background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
+
+  min-height: 45vh;
+
+  border-radius: 16px;
+
+  box-shadow: 0 6px 22px rgba(60,0,100,0.10);
+
 }
 
 .match-card {
-  background: white;
+
+  background: #fff;
+
   color: #3b0073;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  width: 90%;
-  max-width: 600px;
+
+  border-radius: 14px;
+
+  box-shadow: 0 4px 14px rgba(50, 0, 80, 0.22);
+
+  padding: 20px 18px;
+
+  width: 95%;
+
+  max-width: 650px;
+
   text-align: center;
+
   font-weight: bold;
+
+  margin-bottom: 6px;
+
+  border: 2px solid #ece2f5;
+
 }
 
 .match-card h3 {
+
   color: #3b0073;
-  font-size: 22px;
+
+  font-size: 1.25rem;
+
+  margin-bottom: 12px;
+
+  font-weight: 700;
+
 }
 
 .match-card .teams {
+
   display: flex;
-  justify-content: space-between;
+
+ justify-content: space-between;
+
   align-items: center;
-  gap: 10px;
+
+  gap: 16px;
+
+  margin-bottom: 14px;
+
 }
 
 .team {
+
   display: flex;
+
   flex-direction: column;
-  width: 45%;
+
+  width: 46%;
+
+  gap: 8px;
+
+}
+
+.Lplayer-btn, .Rplayer-btn {
+
+  font-size: 1.05em;
+
+  padding: 12px;
+
+  margin: 5px 0;
+
+  border-radius: 7px;
+
+  text-align: center;
+
+  border: none;
+
+  font-weight: 600;
+
+  box-shadow: 0 1px 4px rgba(60,0,100,0.10);
+
+  transition: transform 0.2s, background 0.2s;
+
 }
 
 .Lplayer-btn {
-  background: #009c3c;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  font-size: 16px;
-  padding: 10px;
-  margin: 4px 0;
-  text-align: center;
-  transition: transform 0.2s, background 0.2s;
+
+  background: linear-gradient(90deg, #009c3c 70%, #4dd093 100%);
+
+  color: #fff;
+
 }
 
 .Lplayer-btn:hover {
-  background: #34995b;
-  transform: scale(1.03);
+
+  background: linear-gradient(90deg, #34995b 70%, #4dd093 100%);
+
+  transform: scale(1.045);
+
 }
+
 .Rplayer-btn {
-  background: #0494ad;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  font-size: 16px;
-  padding: 10px;
-  margin: 4px 0;
-  text-align: center;
-  transition: transform 0.2s, background 0.2s;
+
+  background: linear-gradient(90deg, #0494ad 70%, #6ee3f6 100%);
+
+  color: #fff;
+
 }
 
 .Rplayer-btn:hover {
-  background: #3f8e9c;
-  transform: scale(1.03);
+
+  background: linear-gradient(90deg, #3f8e9c 70%, #6ee3f6 100%);
+
+  transform: scale(1.045);
+
 }
 
 .vs-text {
-  font-size: 20px;
+
+  font-size: 1.3rem;
+
   font-weight: bold;
-  color: #3b0073;
+
+  color: #7d00b8;
+
+  margin: 0 10px;
+
 }
 
 .match-time {
+
   margin-top: 10px;
-  font-size: 16px;
+
+  font-size: 1.06rem;
+
   color: #3b0073;
+
   font-weight: 600;
+
 }
 
 .swipe-hint {
+
   font-size: 14px;
-  color: #ccc;
-  margin-top: 30px;
+
+  color: #b6b6b6;
+
+  margin-top: 34px;
+
   text-align: center;
+
 }
 
+ 
+
 /* === NEW: Round Navigation (Improved) === */
+
 .round-navigation {
+
   display: flex;
+
   justify-content: center;
+
   align-items: center;
-  gap: 25px;
-  margin-top: 15px;
-  padding: 5px;
-  background: linear-gradient(135deg, #2a2a72, #009ffd);
-  border-radius: 12px;
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+
+  gap: 28px;
+
+  margin-top: 18px;
+
+  padding: 10px 0;
+
+  background: linear-gradient(135deg, #2a2a72, #009ffd 80%);
+
+  border-radius: 14px;
+
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.13);
+
 }
 
 .round-navigation .round-label {
+
   color: #fff;
-  font-weight: 600;
-  font-size: 1rem;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+
+  font-weight: 700;
+
+  font-size: 1.09rem;
+
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.17);
+
 }
 
 .round-navigation button {
+
   background: #fff;
+
   border: none;
-  padding: 8px 16px;
-  font-size: 0.95rem;
-  font-weight: 600;
-  border-radius: 8px;
+
+  padding: 10px 20px;
+
+  font-size: 1rem;
+
+  font-weight: 700;
+
+  border-radius: 9px;
+
   cursor: pointer;
-  transition: all 0.25s ease;
-  min-width: 50px;
+
+  transition: all 0.23s ease;
+
+  min-width: 52px;
+
+  box-shadow: 0 1px 4px rgba(60,0,100,0.10);
+
 }
 
 .round-navigation button:hover:enabled {
+
   background: #009ffd;
+
   color: #fff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  transform: translateY(-1px);
+
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.17);
+
+  transform: translateY(-1px) scale(1.05);
+
 }
 
 .round-navigation button:disabled {
+
   opacity: 0.5;
+
   cursor: not-allowed;
+
 }
 
-@media (max-width: 600px) {
-  .match-card {
-    width: 95%;
-    padding: 18px;
-  }
-  .teams {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 8px;
-  }
-  .team {
-    width: 48%;
-  }
-  .round-navigation {    
-    gap: 10px;
-  }
-  .round-navigation .round-label {
-    font-size: 0.9rem;
-  }
+ 
+
+/* === Divider for section clarity === */
+
+.section-divider {
+
+  width: 100%;
+
+  height: 2px;
+
+  background: linear-gradient(90deg, #7d00b8, #ff9800);
+
+  border-radius: 2px;
+
+  margin: 24px 0;
+
+  opacity: 0.15;
+
 }
+
+ 
+
+/* === Responsive === */
+
+@media (max-width: 700px) {
+
+  .container {
+
+    padding: 10px 2vw;
+
+    margin-top: 12px;
+
+  }
+
+  .card {
+
+    padding: 16px 8px;
+
+  }
+
+  #game-results {
+
+    padding: 10px 2vw 10px;
+
+    min-height: 38vh;
+
+  }
+
+  .match-card {
+
+    width: 99%;
+
+    padding: 14px 4px;
+
+  }
+
+  .teams {
+
+    gap: 8px;
+
+  }
+
+  .team {
+
+    width: 49%;
+
+  }
+
+  .round-navigation {
+
+    gap: 10px;
+
+    padding: 6px 0;
+
+  }
+
+  .round-navigation .round-label {
+
+    font-size: 0.96rem;
+
+  }
+
+}
+
+ 
+
+
 
   </style>
 </head>
@@ -1555,6 +1929,7 @@ function showRound(index) {
   </script>
 </body>
 </html>
+
 
 
 
